--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,18 @@ h2 {
 
 /* ---------AQUI COMIENZAN LAS PROPIEDADES DEL MAIN ---------- */
 
+.greeting {
+  background-color: #5995da;
+  width: 500px;
+  height: 100px;
+  border: 0 solid black;
+  margin: 200px;
+  padding: 10px;
+  align-items: end;
+  flex-direction: row;
+  
+
+}
 .acerca-de a {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   font-size: 20px;    
