--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,8 @@ text-align: center;
   top: 10px;
   left: 10px;
   border: 2px solid red;
-  width: 400px;
+  width: 700px;
+  height: 700px;
 }
 
 .seccion-proyectos {
